<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DemotiK</string>
    <string name="voice_name">Voice Recon</string>
    <string name="led_name">Led controller</string>
    <string name="device_name">Device controller</string>
    <string name="torrent_name">Torrent controller</string>
    <string name="option_name">Options</string>
    <string name="menu_button">Go to menu</string>
    <string name="input_VIAAC_text">Make VIAAC speak</string>
    <string name="askViaac_editText">Ask VIAAC</string>
    <string name="ask_button">Ask</string>
    <string name="redval_text">Red value</string>
    <string name="greenval_text">Green value</string>
    <string name="blueval_text">Blue value</string>
    <string name="lightall_text">Light all</string>
    <string name="setter_text">LED setter</string>
    <string name="functionalities_text">Other functionalities</string>
    <string name="wave_text">Wave toggle</string>
    <string name="wave_toggle">Wave</string>
    <string name="lightall_toggle">Light</string>
    <string name="sono_text">Sono toggle</string>
    <string name="sono_toggle">Sono</string>
    <string name="screen_text">Screen toggle</string>
    <string name="screen_toggle">Screen</string>
    <string name="resetConnection_button">Reset connection</string>
    <string name="ipAdress_textView">Adresse IP du serveur : </string>
    <string name="ipAdress_editText">Adresse IP</string>
    <string name="port_textView">Numéro de port : </string>
    <string name="port_editText">N° de port</string>
    <string name="save">Sauvegarder</string>
    <string name="dk_image">Image of DK</string>
    <string name="line_image">Image of line</string>
    <string name="led_image">Image of led</string>
    <string name="device_image">Image of device</string>
    <string name="option_image">Image of option</string>
    <string name="reset_image">Image of reset</string>
    <string name="menu_image">Image of menu</string>
    <string name="devices_text">Devices setter</string>
    <string name="statistics_name">Statistics</string>
    <string name="domain_text">Domain address :</string>
    <string name="uptime_text">Uptime :</string>
    <string name="cpuUsagePercent_text">CPU usage (%):</string>
    <string name="cpuUsage_text">CPU usage :</string>
    <string name="memoryUsagePercent_text">Memory usage (%):</string>
    <string name="memoryUsage_text">Memory usage :</string>
    <string name="temperature_text">Temperature (°C):</string>
    <string name="unknown_textView">Unknown</string>

</resources>