<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF"
>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:gravity="center_horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/app_name"
                    android:layout_gravity="center_horizontal"
                    android:textSize="32sp"
                    android:textColor="#195AFF"
                    android:gravity="center_horizontal"
                    android:id="@+id/textView"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:contentDescription="@string/dk_image"
                    android:background="@drawable/donkey_kong_small"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/textView"/>
        </RelativeLayout>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/line_image"
                android:background="@drawable/line" android:layout_gravity="center_horizontal"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/led"
                android:text="@string/led_name" android:src="@drawable/led"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/device"
                android:text="@string/device_name"
                android:src="@drawable/screen"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/torrent"
                android:text="@string/torrent_name"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/config"
                android:text="@string/option_name" android:src="@drawable/options"/>

        <ImageButton
                android:id="@+id/resetConnectionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resetConnection_button" android:src="@drawable/redo"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menuMenu"
                android:text="@string/menu_button" android:src="@drawable/back"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:text="@string/input_VIAAC_text"/>

        <EditText android:id="@+id/viaacInput_editText"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/askViaac_editText"
                  android:inputType="textWebEditText"/>

        <Button android:id="@+id/askViaac_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_button"/>
    </LinearLayout>

</ScrollView>
